# RevilLib

./: .gitignore
.github/workflows/: cmake.yml  release.yaml
database/: make_db.cpp
database/data/: mh3.ini  mhg.ini  sbsyd.ini
include/revil/: arc.hpp  tex.hpp
src/: CMakeLists.txt  arc.cpp  arc.hpp  hashreg.cpp  hfs.hpp  sdl.cpp  tex.cpp  tex.hpp  xfs.cpp
src/mtf_lmt/: codecs.cpp  lmt.cpp  serialize.cpp
src/mtf_mod/: common.cpp  serialize.cpp
toolset/: README.md  doc_template.xml  sign_key.asc
toolset/arc_conv/: CMakeLists.txt  arc_conv.hpp  extract_arc.cpp  make_arc.cpp
toolset/ddon_sngw/: ddon_sngw.cpp
toolset/dev/: CMakeLists.txt  dump_textures.cpp  validate_arcs.cpp
toolset/mtf_tex_convert/: CMakeLists.txt  tex_convert.cpp
toolset/spac_conv/: spac_conv.cpp
toolset/xfs_conv/: xfs_to_xml.cpp
